fix overflow login, register on firefox

--- a/main.css
+++ b/main.css
@@ -985,16 +985,14 @@ table a:hover {
 }
 .rg-lg {
     width: 400px;
-    height: fit-content;
     border: 1px;
     background-color: #f3f3f3;
     box-sizing: border-box;
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+    top: 50%;
+    left: 50%;
+    margin-top: -15rem;
+    margin-left: -15rem;
     padding: 20px 20px 10px 20px;
 }
 .rg-lg-link {
@@ -1019,6 +1017,7 @@ table a:hover {
 .rg-lg-btn {
     float: right;
     margin-top: 20px;
+    margin-bottom:10px;
 }
 .rg-lg-btn button {
     height: 2.125rem;
@@ -1027,7 +1026,7 @@ table a:hover {
 }
 .rg-lg-btn-left {
     border: 0;
-    background: auto;
+    /* background: auto; */
     cursor: pointer;
 }
 .rg-lg-btn-left:hover {
